refactored model and security